work in progress

--- a/.gitignore
+++ b/.gitignore
@@ -336,3 +336,4 @@ ASALocalRun/
 
 /*/appsettings.development.json
 /*/appsettings.development.json
+/Csharp.DevTool.ConsoleUI/appsettings.development.json
