--- a/Csharp.DevTool.Infrastructure/Csharp.DevTool.Infrastructure.csproj
+++ b/Csharp.DevTool.Infrastructure/Csharp.DevTool.Infrastructure.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -8,9 +8,17 @@
 
 	<ItemGroup>
 		<PackageReference Include="Colorful.Console" Version="1.2.15" />
-		<PackageReference Include="LibGit2Sharp" Version="0.28.0" />
+		<PackageReference Include="Dumpify" Version="0.6.4" />
+		<PackageReference Include="LibGit2Sharp" Version="0.29.0" />
+		<PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.4">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="Microsoft.CodeAnalysis.Common" Version="4.8.0" />
+		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.8.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-		<PackageReference Include="Spectre.Console" Version="0.47.1-preview.0.38" />
+		<PackageReference Include="PromptPlus" Version="4.2.0" />
+		<PackageReference Include="Spectre.Console" Version="0.48.0" />
 	</ItemGroup>
 </Project>
